# Tracker

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  Thoughts.txt  main.cpp
src/: ContentView.swift  HelloTracktion.cpp  HelloTracktion.h  HelloTracktionWrapper.h  HelloTracktionWrapper.mm  PlaybackDemoAudio.h  main.cpp  tracker-Bridging-Header.h  trackerUI.swift
src/Player/: ChannelData.h  Pattern.cpp  Pattern.h  Player.cpp  Player.h  Ticker.cpp  Ticker.h
src/test/: PatternTest.cpp  PlayerTest.cpp  ProcessorTest.cpp  SetupTest.cpp  TickerTest.cpp
